[metadata]
name = MagicDrive
version = 0.0.1
author = Valery Gruzilova
description = single-player arcade game for pc
url = https://github.com/Valery-Gruzilova/GameDev
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pc game GameDev MagicDrive arcade magicdrive
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src